; ModuleID = '/home/carl/AnghaBench/linux/drivers/cpufreq/extr_sti-cpufreq.c_sti_cpufreq_fetch_major.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/cpufreq/extr_sti-cpufreq.c_sti_cpufreq_fetch_major.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, %struct.device* }
%struct.device = type { %struct.device_node* }
%struct.device_node = type { i32 }

@ddata = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@.str = private unnamed_addr constant [10 x i8] c"st,syscfg\00", align 1
@MAJOR_ID_INDEX = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [46 x i8] c"No major number offset provided in %pOF [%d]\0A\00", align 1
@.str.2 = private unnamed_addr constant [46 x i8] c"Failed to read major number from syscon [%d]\0A\00", align 1
@VERSION_SHIFT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @sti_cpufreq_fetch_major to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sti_cpufreq_fetch_major() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.device_node*, align 8
  %3 = alloca %struct.device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = load %struct.device*, %struct.device** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ddata, i32 0, i32 1), align 8
  %8 = getelementptr inbounds %struct.device, %struct.device* %7, i32 0, i32 0
  %9 = load %struct.device_node*, %struct.device_node** %8, align 8
  store %struct.device_node* %9, %struct.device_node** %2, align 8
  %10 = load %struct.device*, %struct.device** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ddata, i32 0, i32 1), align 8
  store %struct.device* %10, %struct.device** %3, align 8
  %11 = load %struct.device_node*, %struct.device_node** %2, align 8
  %12 = load i32, i32* @MAJOR_ID_INDEX, align 4
  %13 = call i32 @of_property_read_u32_index(%struct.device_node* %11, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %12, i32* %4)
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %6, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %23

16:                                               ; preds = %0
  %17 = load %struct.device*, %struct.device** %3, align 8
  %18 = load %struct.device_node*, %struct.device_node** %2, align 8
  %19 = ptrtoint %struct.device_node* %18 to i32
  %20 = load i32, i32* %6, align 4
  %21 = call i32 (%struct.device*, i8*, i32, ...) @dev_err(%struct.device* %17, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.1, i64 0, i64 0), i32 %19, i32 %20)
  %22 = load i32, i32* %6, align 4
  store i32 %22, i32* %1, align 4
  br label %40

23:                                               ; preds = %0
  %24 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ddata, i32 0, i32 0), align 8
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @regmap_read(i32 %24, i32 %25, i32* %5)
  store i32 %26, i32* %6, align 4
  %27 = load i32, i32* %6, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %34

29:                                               ; preds = %23
  %30 = load %struct.device*, %struct.device** %3, align 8
  %31 = load i32, i32* %6, align 4
  %32 = call i32 (%struct.device*, i8*, i32, ...) @dev_err(%struct.device* %30, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.2, i64 0, i64 0), i32 %31)
  %33 = load i32, i32* %6, align 4
  store i32 %33, i32* %1, align 4
  br label %40

34:                                               ; preds = %23
  %35 = load i32, i32* %5, align 4
  %36 = load i32, i32* @VERSION_SHIFT, align 4
  %37 = lshr i32 %35, %36
  %38 = and i32 %37, 15
  %39 = add i32 %38, 1
  store i32 %39, i32* %1, align 4
  br label %40

40:                                               ; preds = %34, %29, %16
  %41 = load i32, i32* %1, align 4
  ret i32 %41
}

declare dso_local i32 @of_property_read_u32_index(%struct.device_node*, i8*, i32, i32*) #1

declare dso_local i32 @dev_err(%struct.device*, i8*, i32, ...) #1

declare dso_local i32 @regmap_read(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
